# fowner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: test.yml
api/: .data.sqlite3-shm  Cargo.toml
api/src/: errors.rs  main.rs
api/src/controllers/: mod.rs  projects.rs
api/src/db/: migrations.rs  mod.rs  processor.rs
api/src/db/models/: commit.rs  feature.rs  file.rs  file_commit.rs  file_feature.rs  file_owner.rs  mod.rs  owner.rs  project.rs
api/src/db/stats/: contributions_per_owner.rs  mod.rs
api/src/git/: github.rs  history.rs  manager.rs  mod.rs  repo.rs
api/src/server/: api.rs  mod.rs  paging.rs
api/src/server/controllers/: commits.rs  features.rs  files.rs  mod.rs  owners.rs  projects.rs  stats.rs
api/src/test/: mod.rs
api/src/test/builders/: file_builder.rs  mod.rs  project_builder.rs
scripts/: build-docker.sh
src/: errors.rs  main.rs
src/controllers/: features.rs  mod.rs  owners.rs  projects.rs
src/db/: migrations.rs  mod.rs  processor.rs
src/db/models/: commit.rs  feature.rs  file.rs  file_commit.rs  file_feature.rs  file_owner.rs  mod.rs  owner.rs  project.rs
src/git/: history.rs  mod.rs  repo.rs
src/test/: mod.rs
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.tsx  index.tsx
web/src/components/: Commits.tsx  Delete.tsx  Features.tsx  Projects.tsx  Table.css  Update.tsx
web/src/components/stats/: CombinedContribution.tsx  Contribution.tsx  ProjectContributions.tsx
web/src/helpers/: colours.ts  config.ts
web/src/hooks/: queries.hooks.ts
web/src/routes/: FileBetweenCommits.tsx  Files.tsx  Owner.tsx  Owners.tsx
web/src/routes/stats/: Contributors.tsx
web/src/styles/: Contributors.css  Table.css
web/src/types/: ContributorTypes.ts
