[package]
name = "fowner"
version = "0.1.0"
edition = "2021"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
