[package]
name = "fowner"
version = "0.1.0"
edition = "2021"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fowner"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
r2d2_sqlite = { version = "0.16.0"}
r2d2 = "0.8.8"
chrono = { version= "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4.0"
actix-web = "4"
thiserror = "1.0"
regex = "1.5.6"

[dev-dependencies]
rand = "0.8.5"
