[package]
name = "fowner"
version = "0.1.2"
edition = "2021"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
license = "MIT"
description = "Track features and file ownership for git repositories"
homepage = "https://github.com/Krakaw/fowner"
repository = "https://github.com/Krakaw/fowner"
readme = "../README.md"
keywords = ["git", "features", "owners", "commits"]
categories = ["command-line-utilities", "web-programming::http-server", "development-tools"]

[[bin]]
name = "fowner"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
chrono = { version= "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.0"
r2d2 = "0.8.8"
r2d2_sqlite = { version = "0.16.0"}
regex = "1.5.6"
rusqlite_migration = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14.0"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8.5"
